--- a/src/pages/RegisterPage/Register.css
+++ b/src/pages/RegisterPage/Register.css
@@ -1,4 +1,4 @@
-.container-bg-login {
+.container-bg-register {
   position: fixed;
   top: 0;
   margin: 0;
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
 }
-.login-container {
+.register-container {
   border: 2px solid #2f6c82;
   border-radius: 9px;
   display: grid;
@@ -19,36 +19,32 @@
 
   box-shadow: 7px 8px 9px 1px rgba(0, 0, 0, 0.5);
 }
-.login-img {
+.register-img {
   margin: 0;
   background-color: #2f6c82;
   display: block;
   align-content: center;
   box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.5);
 }
-.login-img img {
+.register-img img {
   width: 100%;
   height: 50%;
 }
-.contain-form-login {
+.contain-form-register {
   margin: 0;
   padding: 40px;
 }
-.contain-form-login h1 {
+.contain-form-register h1 {
   font-size: 3rem;
   margin-bottom: 30px;
 }
-.contain-form-login input {
+.contain-form-register input {
   padding: 10px;
   width: 15rem;
   border: 1px solid #2f6c82;
   border-radius: 5px;
 }
-.contain-form-login h1 {
-  font-size: 3rem;
-}
-
-.operacoes button {
+.operacoes-register button {
   padding: 10px;
   border-radius: 50px;
   border: none;
@@ -57,46 +53,28 @@
   font-weight: bold;
   border: 1px solid #2f6c82;
 }
-.operacoes button:hover {
+.operacoes-register button:hover {
   background-color: white;
   color: #2f6c82;
   transition: 0.2s;
 }
-.operacoes {
+.operacoes-register {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
 }
-.operacoes a {
-  text-decoration: none;
-  color: #2f6c82;
-  position: relative;
-  cursor: pointer;
-}
-.operacoes a::after {
-  content: "";
-  display: block;
-  background-color: #2f6c82;
-  width: 0%;
-  height: 2px;
-  position: absolute;
-}
-.operacoes a:hover::after {
-  width: 100%;
-  transition: 0.2s;
-}
-.operacoes .btn-cansel {
+.operacoes-register .btn-cansel {
   background-color: #d32f2f;
   border-color: #d32f2f;
 }
-.operacoes .btn-cansel:hover {
+.operacoes-register .btn-cansel:hover {
   color: #d32f2f;
 }
 @media (max-width: 900px) {
-  .login-container {
+  .register-container {
     grid-template-columns: 1fr;
   }
-  .login-img {
+  .register-img {
     display: none;
   }
 }
